<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_pref_bluetooth">
        <ListPreference
            android:dialogTitle="@string/pref_bluetooth_list_devices_title"
            android:key="bluetooth_list_preference"
            android:summary="@string/pref_bluetooth_list_devices_summary"
            android:title="@string/pref_bluetooth_list_devices_title" />
    </PreferenceCategory>
    <!--    <PreferenceCategory
            android:layout="@layout/preference_selected"
            android:key="preference_selected"
            />-->
    <EditTextPreference
        android:key="edit_text_preference_1"
        android:selectable="false"
        android:title="@string/no_device_selected" />
</PreferenceScreen>
