<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vehicle_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_auto_back"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.cardiag.activity.StateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/obd_status_layout">

        <Space
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <TextView
            android:id="@+id/obd_status"
            android:layout_height="wrap_content"
            android:background="#EB4E7A7E"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_marginRight="7.5dp"
            android:layout_marginLeft="7.5dp"
            android:text="@string/status_obd_disconnected"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="3.75dp" />

    <android.support.v7.widget.RecyclerView

        android:id="@+id/data_grid"
        android:layout_width="fill_parent"
        android:layout_height="373dp"
        android:layout_weight="1"
        >

    </android.support.v7.widget.RecyclerView>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/botonPlay"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:drawableLeft="@mipmap/ic_play"
                android:onClick="startLiveData"
                android:padding="16dp"
                android:text="@string/start_live_data"
                android:textSize="15sp" />

            <Button
                android:id="@+id/botonStop"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:drawableLeft="@mipmap/ic_stop"
                android:onClick="stopLiveData"
                android:padding="16dp"
                android:text="@string/stop_live_data"
                android:textSize="15sp"
                android:visibility="invisible" />
        </RelativeLayout>
    </TableRow>

</LinearLayout>